# notifications-mcp-server

./: .architecture_diagram.txt.old  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  __main__.py  install.sh  notification_server.py  notify-claude.sh  pyproject.toml  server.py  setup.py  test_notification.py
.claude/: settings.json
.claude/agents/: backend-developer.md  frontend-developer.md  pre-commit-reviewer.md  product-system.md
.claude/hooks/: pre-commit-review.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-test.yml
notifications/: __init__.py  server.py
notifications/core/: __init__.py  notification_manager.py  sound_manager.py
notifications/platform/: __init__.py
notifications/platform/macos/: __init__.py  notification.py  sound.py
notifications/utils/: __init__.py  config.py  logging.py
tests/: test_modular_structure.py  test_notification_manager.py  test_sound_manager.py
