[project]
name = "notifications-mcp-server"
version = "1.0.0"
description = "MCP server for Claude Desktop sound notifications on macOS"
authors = [
    {name = "Charles Adedotun", email = "charles.adedotun8@gmail.com"}
]
repository = "https://github.com/charles-adedotun/notifications-mcp-server"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"notification_server" = "notification_server.py"
