[project]
name = "notifications-mcp-server"
version = "1.2.1"
description = "MCP server for Claude Desktop sound and visual notifications on macOS"
authors = [
    {name = "Charles Adedotun", email = "charles.adedotun8@gmail.com"}
]
repository = "https://github.com/charles-adedotun/notifications-mcp-server"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=0.4.1",
]

[project.optional-dependencies]
visual = [
    "pyobjc-core>=9.0",
    "pyobjc-framework-Cocoa>=9.0",
]
pync = [
    "pync>=2.0.3",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.260",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"notification_server" = "notification_server.py"