[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notifications-mcp-server"
description = "MCP server for Claude Desktop sound and visual notifications on macOS"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Charles Adedotun", email = "charles.adedotun8@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
dynamic = ["version"]
dependencies = [
    "fastmcp>=0.4.1",
    "uv>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/charles-adedotun/notifications-mcp-server"
Issues = "https://github.com/charles-adedotun/notifications-mcp-server/issues"

[project.scripts]
claude-notifications = "notifications.server:main"

[tool.setuptools.dynamic]
version = {attr = "notifications.__version__"}

[tool.setuptools.packages.find]
include = ["notifications", "notifications.*"]

[project.optional-dependencies]
visual = [
    "pyobjc-core>=9.0",
    "pyobjc-framework-Cocoa>=9.0",
]
pync = [
    "pync>=2.0.3",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.260",
]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I"]
ignore = []
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.isort]
known-first-party = ["notifications"]